k8s/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: gateway
  namespace: default
spec:
  gatewayClassName: nginx  # Use the nginx GatewayClass here
  listeners:
  - protocol: HTTP
    port: 80
    name: gateway
    allowedRoutes:
      namespaces:
        from: All
